# brogle

./: .gitignore  Cargo.toml  README.md  dutchess_perft.sh  engine-interface.md  make-release.sh  run-fastchess.sh  run_fastchess.sh
.github/workflows/: rust.yml
bitboard_viewer/: Cargo.toml
bitboard_viewer/src/: main.rs
brogle/: Cargo.toml
brogle/src/: config.rs  engine.rs  lib.rs  main.rs
brogle/src/eval/: eval.rs  evaluator.rs  piece_square_tables.rs
brogle/src/protocols/: uci.rs
brogle/src/search/: score.rs  search.rs  search_utils.rs  searcher.rs  transposition_table.rs
brogle/src/uci/: protocol.rs
brogle_core/: Cargo.toml  README.md  build.rs
brogle_core/brogle_types/: Cargo.toml  README.md
brogle_core/brogle_types/src/: bitboard.rs  color.rs  lib.rs  magicgen.rs  piece.rs  tile.rs  utils.rs
brogle_core/src/: bitboard.rs  color.rs  lib.rs  magicgen.rs  main.rs  movegen.rs  moves.rs  perft.rs  piece.rs  position.rs  prng.rs  tile.rs  utils.rs  zobrist.rs
brogle_core/src/blobs/: queen_mobility.blob  ray_between_inclusive.blob  ray_containing.blob
brogle_core/tests/: movegen.rs  perft.rs
brogle_engine/: Cargo.toml
brogle_engine/src/: engine.rs  lib.rs  main.rs  uci.rs
brogle_engine/src/eval/: eval.rs
brogle_engine/src/search/: search.rs
brogle_engine/src/uci/: protocol.rs
brogle_tools/: Cargo.toml
brogle_tools/src/: bitboard_viewer.rs  magic_generator.rs  magics.rs  move_generator.rs  movegen_debugger.rs  perft_bench.rs  perftree_script.rs
brogle_tools/src/arena/: main.rs
brogle_tools/src/gui/src/: main.rs
chessie/: Cargo.toml  README.md  build.rs
chessie/src/: game.rs  lib.rs  main.rs  movegen.rs  moves.rs  perft.rs  position.rs  prng.rs  utils.rs  zobrist.rs
chessie/tests/: movegen.rs  perft.rs
chessie/types/: Cargo.toml  README.md
chessie/types/src/: bitboard.rs  lib.rs  magicgen.rs  piece.rs  square.rs  tile.rs  utils.rs
dutchess_core/: Cargo.toml  README.md
dutchess_core/src/: bitboard.rs  board.rs  color.rs  error.rs  game.rs  lib.rs  magicgen.rs  main.rs  maskgen.rs  movegen.rs  moves.rs  perft.rs  piece.rs  position.rs  tile.rs  utils.rs
dutchess_core/src/blobs/: magics  rays_between.rs
dutchess_core/src/core/: board.rs  color.rs  error.rs  game.rs  gen.rs  magics.rs  maskgen.rs  movegen.rs  moves.rs  piece.rs  pregenerated_magics.rs  rays.rs  tile.rs  utils.rs
dutchess_core/src/core/blobs/: black_pawn_attack.blob  black_pawn_push.blob  rook_masks.blob  white_pawn_attack.blob  white_pawn_push.blob
dutchess_core/src/engine/: engine.rs  uci.rs
dutchess_core/tests/: movegen.rs  perft.rs
dutchess_engine/: Cargo.toml  build.rs
dutchess_engine/src/: bitboard.rs  engine.rs  eval.rs  game.rs  lib.rs  main.rs  maskgen.rs  movegen.rs  piece.rs  position.rs  search.rs  tile.rs  uci.rs  utils.rs
dutchess_engine/src/eval/: eval.rs  piece_square_tables.rs
dutchess_engine/src/masks/: bishop_masks.blob
dutchess_engine/src/search/: search.rs
dutchess_gui/: Cargo.toml
dutchess_gui/src/: main.rs
dutchess_move_gen/: Cargo.toml  fens.txt  fentests.txt  fentext.txt
dutchess_move_gen/src/: main.rs
dutchess_perft/: Cargo.toml
dutchess_perft/src/: main.rs
dutchess_tools/: Cargo.toml
dutchess_tools/src/: bitboard_viewer.rs  magic_generator.rs  magics.rs  perft_bench.rs  perftree_script.rs
dutchess_tools/src/arena/: main.rs
dutchess_tools/src/gui/: build.rs
magic_generator/: Cargo.toml
magic_generator/src/: main.rs
scripts/: make-release.sh  run-fastchess.sh
