[package]
name = "bitboard_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.15.0"
macroquad = "0.4.8"

dutchess_engine = { path = "../dutchess_engine" }
dutchess_core = { path = "../dutchess_core" }