[package]
name = "brogle_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bitboard_viewer"
path = "src/bitboard_viewer.rs"

[[bin]]
name = "move_generator"
path = "src/move_generator.rs"

[[bin]]
name = "movegen_debugger"
path = "src/movegen_debugger.rs"

[[bin]]
name = "perftree_script"
path = "src/perftree_script.rs"

[[bin]]
name = "arena"
path = "src/arena/main.rs"

[[bin]]
name = "perft_bench"
path = "src/perft_bench.rs"


[dependencies]
anyhow = "1.0.86"
brogle = { path = "../brogle" }
chessie = { path = "../chessie" }
egui-macroquad = "0.15.0"
macroquad = "0.4.8"
chess = "3.2.0"
clap = { version = "4.5.10", features = ["derive"] }
colored = "2.1.0"