[package]
name = "chessie"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrayvec = "0.7.4"
types = { path = "types" }

[build-dependencies]
types = { path = "types" }