[package]
name = "dutchess_engine"
version = "0.1.0"
edition = "2021"
authors = ["Bill Cipher"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
dutchess_core = { path = "../dutchess_core" }
rand = "0.8.5"
anyhow = "1.0.86"