[package]
name = "dutchess_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
dutchess_engine = { path = "../dutchess_engine" }
dutchess_core = { path = "../dutchess_core" }
egui-macroquad = "0.15.0"

[build-dependencies]
macroquad = "0.3.26"
